--- a/postgresql-pgadmin4/docker-compose.yml
+++ b/postgresql-pgadmin4/docker-compose.yml
@@ -19,9 +19,14 @@ services:
       - 8080:80
     volumes:
       - pgadmin-data:/var/lib/pgadmin
+      # PassFileも一緒に配置したかったが、下記を参考にしてもうまくいかなかった
+      # https://stackoverflow.com/questions/66578506/where-is-the-pgpass-file-in-pgadmin4-docker-container-when-this-file-is-mounted
+      - ./config/servers.json:/pgadmin4/servers.json
     environment:
       PGADMIN_DEFAULT_EMAIL: user@example.com
       PGADMIN_DEFAULT_PASSWORD: password
+      PGADMIN_CONFIG_SERVER_MODE: "False"
+      PGADMIN_CONFIG_MASTER_PASSWORD_REQUIRED: "False"
     depends_on:
       - db
 
